infra/k8s/streamlit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
        - name: streamlit
          image: celiaoued/streamlit-reactivity-app:latest
          ports:
            - containerPort: 8501
