infra/k8s/streamlit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit
spec:
  selector:
    app: streamlit
  ports:
    - port: 8501
      targetPort: 8501
