infra/k8s/streamlit/ingress.yaml
## domain a ajouter: readme

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - streamlit.monapp.com
      secretName: streamlit-tls
  rules:
    - host: streamlit.monapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit
                port:
                  number: 8501
